tests/cases/negative/assignment.lang
i32 x = "a string";
